Fix tag labels sometimes overlapping their bounding box.
This caused tags at the bottom of the hover info panel to sometimes be outside the
layout of the box, which caused a vertical scrollbar to appear.

--- a/web/resources/main.scss
+++ b/web/resources/main.scss
@@ -1857,6 +1857,11 @@ body.hide-r18g .r18g { display: none; }
     align-content: center;
     align-items: center;
     height: 2em;
+
+    // Make sure CJK fonts don't extend the label beyond our 2em height when padding is
+    // added.
+    line-height: 1.5em;
+
     border-radius: 2px;
 
     color: var(--box-link-fg-color);
